--- a/templates/main.html
+++ b/templates/main.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-          crossorigin="anonymous">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <!-- JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -34,123 +34,124 @@
 
 
     <script>
-    $(document).ready(function () {
-        show_list();
-    });
-
-    function participate(num) {
-        $.ajax({
-            type: "POST",
-            url: "/post/participate",
-            data: {num_give: num},
-            success: function (response) {
-                console.log(response["msg"])
-                window.location.reload()
-            }
+        $(document).ready(function () {
+            show_list();
         });
-    }
 
-    function participate(num) {
-        $.ajax({
-            type: "POST",
-            url: "/post/undo",
-            data: {num_give: num},
-            success: function (response) {
-                console.log(response['msg'])
-                window.location.reload()
-            }
-        });
-    }
+        function participate(num) {
+            $.ajax({
+                type: "POST",
+                url: "/post/participate",
+                data: {num_give: num},
+                success: function (response) {
+                    console.log(response["msg"])
+                    window.location.reload()
+                }
+            });
+        }
 
-    function show_list() {
-        $.ajax({
-            type: "GET",
-            url: "/posts/list",
-            data: {},
-            success: function (response) {
-                const result = response["data"];
+        function participate(num) {
+            $.ajax({
+                type: "POST",
+                url: "/post/undo",
+                data: {num_give: num},
+                success: function (response) {
+                    console.log(response['msg'])
+                    window.location.reload()
+                }
+            });
+        }
 
-                for (let i = 0; i < result.length; i++) {
-                    const title = response[i]["title"];
-                    const nickname = response[i]['nickname']
-                    const image = response[i]["image"];
-                    const participants = response[i]["participants"];
-                    const postNumber = response[i]["postnum"];
-                    const done = response[i]["postnum"];
-                    const num = response[i]["num"]
+        function show_list() {
+            $.ajax({
+                type: "GET",
+                url: "/posts/list",
+                data: {},
+                success: function (response) {
+                    const result = response["data"];
 
-                    let temp_html = ``
-                    if (done == 0) {
-                        temp_html = `<a href="#">
+                    for (let i = 0; i < result.length; i++) {
+                        const title = response[i]["title"];
+                        const nickname = response[i]['nickname']
+                        const image = response[i]["image"];
+                        const dateTime = response[i]['dateTime']
+                        const participants = response[i]["participants"];
+                        const postNumber = response[i]["postnum"];
+                        const done = response[i]["postnum"];
+                        const num = response[i]["num"]
+
+                        let temp_html = ``
+                        if (done == 0) {
+                            temp_html = `<a href="#">
                                         <div class="card" style="width: 18rem;">
                                             <img src="${image}"
                                                  class="card-img-top" alt="...">
                                             <div class="card-body">
                                                 <h5 class="card-title">${title}</h5>
-                                                <p class="card-text"></p>
+                                                <p>${dateTime}</p>
                                                 <p>${nickname}</p>
                                                 <button onclick="participate(${num})" class="btn btn-primary">참가하기 [현재 숫자: ${postNumber}/${participants}]</button>
                                             </div>
                                         </div>
                                     </a>`
-                    } else {
-                        temp_html = `<a href="#">
+                        } else {
+                            temp_html = `<a href="#">
                                         <div class="card" style="width: 18rem;">
                                             <img src="${image}"
                                                  class="card-img-top" alt="...">
                                             <div class="card-body">
                                                 <h5 class="card-title">${title}</h5>
-                                                <p class="card-text"></p>
+                                                <p>${dateTime}</p>
                                                 <p>${nickname}</p>
                                                 <button onclick="cancel(${num})" class="btn btn-primary">취소 [현재 숫자: ${postNumber}+1/${participants}</button>
                                             </div>
                                         </div>
                                     </a>`
+                        }
+                        $("[posts]").append(temp_html);
                     }
-                    $("[posts]").append(temp_html);
-                }
-            },
-        });
-    }
+                },
+            });
+        }
 
-    // function toggle_like(post_id, type) {
-    //     console.log(post_id, type)
-    //     let $a_like = $(`#${post_id} a[aria-label='heart']`)
-    //     let $i_like = $a_like.find("i")
-    //     if ($i_like.hasClass("fa-heart")) {
-    //         $.ajax({
-    //             type: "POST",
-    //             url: "/update_like",
-    //             data: {
-    //                 post_id_give: post_id,
-    //                 type_give: type,
-    //                 action_give: "unlike"
-    //             },
-    //             success: function (response) {
-    //                 console.log("unlike")
-    //                 $i_like.addClass("fa-heart-o").removeClass("fa-heart")
-    //                 $a_like.find("span.like-num").text(response["count"])
-    //             }
-    //         })
-    //     } else {
-    //         $.ajax({
-    //             type: "POST",
-    //             url: "/update_like",
-    //             data: {
-    //                 post_id_give: post_id,
-    //                 type_give: type,
-    //                 action_give: "like"
-    //             },
-    //             success: function (response) {
-    //                 console.log("like")
-    //                 $i_like.addClass("fa-heart").removeClass("fa-heart-o")
-    //                 $a_like.find("span.like-num").text(response["count"])
-    //             }
-    //         })
-    //
-    //     }
-    // }
-</script>
+        // function toggle_like(post_id, type) {
+        //     console.log(post_id, type)
+        //     let $a_like = $(`#${post_id} a[aria-label='heart']`)
+        //     let $i_like = $a_like.find("i")
+        //     if ($i_like.hasClass("fa-heart")) {
+        //         $.ajax({
+        //             type: "POST",
+        //             url: "/update_like",
+        //             data: {
+        //                 post_id_give: post_id,
+        //                 type_give: type,
+        //                 action_give: "unlike"
+        //             },
+        //             success: function (response) {
+        //                 console.log("unlike")
+        //                 $i_like.addClass("fa-heart-o").removeClass("fa-heart")
+        //                 $a_like.find("span.like-num").text(response["count"])
+        //             }
+        //         })
+        //     } else {
+        //         $.ajax({
+        //             type: "POST",
+        //             url: "/update_like",
+        //             data: {
+        //                 post_id_give: post_id,
+        //                 type_give: type,
+        //                 action_give: "like"
+        //             },
+        //             success: function (response) {
+        //                 console.log("like")
+        //                 $i_like.addClass("fa-heart").removeClass("fa-heart-o")
+        //                 $a_like.find("span.like-num").text(response["count"])
+        //             }
+        //         })
+        //
+        //     }
+        // }
+    </script>
     <style>
         .logo {
             background-color: lightgoldenrodyellow;
@@ -159,6 +160,10 @@
             display: table-cell;
             vertical-align: middle;
             /*padding: 0px 50px 0px 50px;*/
+        }
+
+        a:link {
+            text-decoration: none!important;
         }
 
         /*.top-menu {*/
@@ -184,9 +189,8 @@
         }
 
         #container {
-            width:100%;
+            width: 100%;
             float: left;
-            height: 60px;
         }
 
         #footer {
@@ -237,10 +241,15 @@
         }
 
         #nav ul {
-            display:none;
+            display: none;
         }
+
         #nav > li:hover > ul {
-            display:block;
+            display: block;
+        }
+
+        .row.row-cols-1.row-cols-md-3.g-4 {
+            margin: 60px 0 0 20px;
         }
 
 
@@ -264,13 +273,40 @@
     </div>
 </div>
 <div id="container">
-    <ul class="posts"></ul>
+    <div>
+        <button style="float:right;margin:10px 50px 0px 0px;">게시글 등록하기</button>
+    </div>
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+        <a href="#">
+            <div class="col">
+                <div class="card h-100">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS423fw2s7z5wH7X-UDmmdApj_y0Kli8btMww&usqp=CAU"
+                         class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">제목</h5>
+                        <p>2022.05.11</p>
+                        <p>닉네임</p>
+                    </div>
+                </div>
+                <div class="card-footer">
+                    <small class="text-muted">
+                        <button onclick="participate(4)" class="btn btn-primary">참가하기 [현재 숫자:
+                            11/20]
+                        </button>
+                    </small>
+                </div>
+            </div>
+        </a>
+    </div>
+</div>
 </div>
 <div id="footer" role="contentinfo">
     <div class="footer_inner">
         <div class="corp_area" data-clk-prefix="plc"><h3 class="blind">끼리끼리 정책 및 약관</h3>
             <ul class="list_corp">
-                <li class="corp_item"><a href="#" data-clk="intronhn">간략 소개</a></li>
+                <li class="corp_item"><a
+                        href="https://velog.io/@blackbird7/Chapter-1-%EB%AF%B8%EB%8B%88-%ED%94%84%EB%A1%9C%EC%A0%9D%ED%8A%B8-Starting-Assignment-8%EC%A1%B0"
+                        data-clk="intronhn">간략 소개</a></li>
                 <li class="corp_item"><a href="#" data-clk="service">이용 약관</a></li>
             </ul>
             <div class="footer_cell">
