--- a/templates/main.html
+++ b/templates/main.html
@@ -302,7 +302,7 @@
 </div>
 <div id="container">
     <div>
-        <button style="float:right;margin:10px 50px 0px 0px;">게시글 등록하기</button>
+        <button type="button" class="btn btn-secondary" style="float:right;margin:10px 50px 0px 0px;">게시글 등록하기</button>
     </div>
     <div class="row row-cols-1 row-cols-md-3 g-4">
         <a href="#">
