--- a/templates/main.html
+++ b/templates/main.html
@@ -35,9 +35,9 @@
 
     <script>
 
-    $(document).ready(function () {
-        show_list();
-    });
+        $(document).ready(function () {
+            show_list();
+        });
 
         function participate(num) {
             $.ajax({
@@ -103,7 +103,7 @@
             });
         }
 
-function posting() {
+        function posting() {
 
             let post_info = "{{ user_info.id }}"
             let title = $("#title").val()
@@ -133,7 +133,7 @@ function posting() {
             });
         }
 
-  </script>
+    </script>
     <style>
         .logo {
             background-color: lightgoldenrodyellow;
@@ -256,7 +256,8 @@ function posting() {
 </div>
 <div id="container">
     <div>
-        <button onclick="$('#modal').css('display', 'block');" style="float:right;margin:10px 50px 0px 0px;">게시글 등록하기</button>
+        <button onclick="$('#modal').css('display', 'block');" type="button" class="btn btn-secondary" style="float:right;margin:10px 50px 0px 0px;">게시글 등록하기
+        </button>
     </div>
     <div class="row row-cols-1 row-cols-md-3 g-4">
         <a href="#">
@@ -351,8 +352,11 @@ function posting() {
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" onclick="$('#modal').css('display', 'none');" data-bs-dismiss="modal" >닫기</button>
-                <button type="button" class="btn btn-primary" onclick="posting()" class="button is-success">저장하기</button>
+                <button type="button" class="btn btn-secondary" onclick="$('#modal').css('display', 'none');"
+                        data-bs-dismiss="modal">닫기
+                </button>
+                <button type="button" class="btn btn-primary" onclick="posting()" class="button is-success">저장하기
+                </button>
             </div>
         </div>
     </div>
