--- a/templates/main.html
+++ b/templates/main.html
@@ -97,6 +97,7 @@
                         const done = result[i]["done"]
 
                         let temp_html = ``
+                        let date_time = Date_Time(dateTime)
                         if (done == 0 & partNum < participants) {
                             temp_html = `<a href="#">
                                             <div class="col">
@@ -106,7 +107,7 @@
                                                     <div class="card-body">
                                                         <h5 class="card-title">${title}</h5>
                                                         <h6>${content}</h6>
-                                                        <p>${dateTime}</p>
+                                                        <p>${date_time}</p>
                                                     </div>
                                                 </div>
                                                 <div class="card-footer">
@@ -128,7 +129,7 @@
                                                     <div class="card-body">
                                                         <h5 class="card-title">${title}</h5>
                                                         <h6>${content}</h6>
-                                                        <p>${dateTime}</p>
+                                                        <p>${date_time}</p>
                                                     </div>
                                                 </div>
                                                 <div class="card-footer">
@@ -151,7 +152,7 @@
                                                     <div class="card-body">
                                                         <h5 class="card-title">${title}</h5>
                                                         <h6>${content}</h6>
-                                                        <p>${dateTime}</p>
+                                                        <p>${date_time}</p>
                                                     </div>
                                                 </div>
                                                 <div class="card-footer">
@@ -169,6 +170,24 @@
                     }
                 }
             });
+        }
+        //시간 정리
+        function Date_Time(date) {
+            let today = new Date()
+            let time = (today - date) / 1000 / 60  // 분
+
+            if (time < 60) {
+                return parseInt(time) + "분 전"
+            }
+            time = time / 60  // 시간
+            if (time < 24) {
+                return parseInt(time) + "시간 전"
+            }
+            time = time / 24
+            if (time < 7) {
+                return parseInt(time) + "일 전"
+            }
+            return `${date.getFullYear()}년 ${date.getMonth() + 1}월 ${date.getDate()}일`
         }
 
         function posting() {
@@ -208,6 +227,7 @@
             font-family: 'Jua', sans-serif;
             color: royalblue;
         }
+
         .logo {
             background-color: lightgoldenrodyellow;
             height: 150px;
@@ -234,7 +254,8 @@
 
 
 
-        {#float: right;#}           */
+
+        {#float: right;#}            */
         /*}*/
 
         #header, #section, #container, #footer {
