--- a/templates/main.html
+++ b/templates/main.html
@@ -357,7 +357,7 @@
             </ul>
             <div class="footer_cell">
                 <address class="addr">
-                    Copyright© '&copy'
+                    Copyright&copy
                     <a href="#">Ggiri Ggiri 끼리끼리</a>
                     All rights reserved.
                 </address>
