update: 로그아웃 되게하기

--- a/templates/main.html
+++ b/templates/main.html
@@ -383,7 +383,7 @@
             <li>
               <a href="#">User Nickname</a>
               <ul>
-                <li><p onclick="logout()">로그아웃</p></li>
+                <li><a onclick="logout()">로그아웃</a></li>
                 <li><a href="#">내 게시글 보기</a></li>
               </ul>
             </li>
