--- a/templates/register.html
+++ b/templates/register.html
@@ -58,7 +58,7 @@
                     success: function (response) {
                         if (response["result"] == "success") {
                             alert("회원가입이 완료되었습니다.");
-                            window.location.reload();
+                            window.location.href = "/posts";
                         }
                     }
                 })
