update: 스타일 바꿈

--- a/templates/main.html
+++ b/templates/main.html
@@ -248,7 +248,7 @@
       }
 
       .logo {
-        background-color: lightgoldenrodyellow;
+        background-color: skyblue;
         height: 150px;
         text-align: center;
         display: table-cell;
@@ -284,7 +284,7 @@
         display: block;
         margin: 4px;
         padding: 4px;
-        background-color: #ddd;
+        background-color: lightcyan;
         text-align: center;
       }
 
@@ -341,7 +341,7 @@
         padding: 7px 8px;
         margin: 0;
         color: black;
-        background-color: royalblue;
+        background-color: lightgoldenrodyellow;
         text-decoration: none; /*글자의 밑줄 없애기*/
         text-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
       }
@@ -422,7 +422,7 @@
           </ul>
           <div class="footer_cell">
             <address class="addr">
-              Copyright© '&copy'
+              Copyright &copy
               <a href="#">Ggiri Ggiri 끼리끼리</a>
               All rights reserved.
             </address>
